[tool.poetry]
name = "cryptowab"
version = "0.1.0"
description = ""
authors = ["akm77 <aleksey.kotryakhov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = ">=3.0.0b7"
aiogram-dialog = ">=2.0.0b17"
SQLAlchemy = "^2.0.4"
python-dotenv = "^1.0.0"
aiosqlite = "^0.18.0"
redis = "^4.5.1"
fake-useragent = "^1.1.1"
base58 = "^2.1.1"
tenacity = "^8.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
